--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_ANALYTICS_ID=UA-114361661-6
+DB_URI="mongodb+srv://admin:tT7OZ5Mg8lmifb1k@cluster0.mt0sb.mongodb.net/?retryWrites=true&w=majority"
+JWT_SECREAT="devchamps-key"
+TABLE_NAME="devchamps-shop"
+NEXT_PUBLIC_API_BASE_URL="http://localhost:3000"
