--- a/package.json
+++ b/package.json
@@ -17,13 +17,24 @@
   ],
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "autoprefixer": "^10.4.14",
+    "bcryptjs": "^2.4.3",
+    "encoding": "^0.1.13",
+    "joi": "^17.9.2",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "mongoose": "^7.3.1",
     "next": "^12.1.0",
     "next-redux-wrapper": "^6.0.2",
+    "postcss": "^8.4.24",
     "rc-slider": "^9.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^6.8.2",
+    "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "react-rater": "^5.1.1",
     "react-redux": "^7.2.1",
     "react-select": "^3.1.0",
@@ -38,9 +49,12 @@
     "use-onclickoutside": "^0.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.2",
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.34",
-    "@types/react": "^18.0.9",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.14",
     "@types/react-dom": "^18.0.4",
     "fslightbox-react": "^1.5.0",
     "node-fetch": "^3.1.1",
